--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neeko-router",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "src/router.js",
   "author": "Colin Tindle <ampersand@underscore.space>",
   "license": "CC-BY-4.0",
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.4.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/underscoredotspace/neeko-router"
   }
 }
