--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "scripts": {
     "start": "parcel demo/index.html",
     "build": "parcel build demo/index.html --public-url ./",
-    "test": "jest --watchAll"
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:ci": "jest -i --coverage && cat coverage/lcov.info | coveralls"
   },
   "devDependencies": {
     "babel-jest": "^22.0.4",
     "babel-preset-env": "^1.6.1",
     "jest": "^22.0.4",
-    "parcel-bundler": "^1.4.1"
+    "parcel-bundler": "^1.4.1",
+    "coveralls": "^3.0.0"
   },
   "repository": {
     "type": "git",
