--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "parcel-bundler": "^1.4.1",
     "coveralls": "^3.0.0"
   },
+  "files": [
+    "src/"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/underscoredotspace/neeko-router"
