--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neeko-router",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "src/router.js",
   "author": "Colin Tindle <ampersand@underscore.space>",
   "license": "CC-BY-4.0",
@@ -14,9 +14,9 @@
   "devDependencies": {
     "babel-jest": "^22.0.4",
     "babel-preset-env": "^1.6.1",
+    "coveralls": "^3.0.0",
     "jest": "^22.0.4",
-    "parcel-bundler": "^1.4.1",
-    "coveralls": "^3.0.0"
+    "parcel-bundler": "^1.4.1"
   },
   "files": [
     "src/"
