--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "parcel demo/index.html",
     "build": "parcel build demo/index.html --public-url ./",
     "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test:watch": "jest --watchAll --notify",
     "test:ci": "jest -i --coverage && cat coverage/lcov.info | coveralls"
   },
   "devDependencies": {
